--- a/eticaret/client/package.json
+++ b/eticaret/client/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@ant-design/charts": "^2.1.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
