--- a/eticaret/client/package.json
+++ b/eticaret/client/package.json
@@ -12,12 +12,17 @@
   },
   "dependencies": {
     "@ant-design/charts": "^2.1.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.2",
+    "@mui/x-charts": "^7.15.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-to-print": "^2.15.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
