--- a/eticaret/client/package.json
+++ b/eticaret/client/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-to-print": "^2.15.1"
