--- a/eticaret/api/.env
+++ b/eticaret/api/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://mertayhandev:mert123@cluster0.o9ekq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+Buraya Kendi Urlnizi ekleyiniz kasti olarak gizliye çekmedim 
